objects/asb_ListingPopularity__c.object
<CustomObject><fields>
        <fullName>ActivityDate__c</fullName>
        <description>The date on which the activities for this listing occurred.</description>
        <inlineHelpText>The date on which the activities for this listing occurred.</inlineHelpText>
        <label>Activity Date</label>
        <required>true</required>
        <type>Date</type>
    </fields><fields>
        <fullName>InstallCount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of installs on this listing on this date. Used to calculate 30-day popularity for the listing.</description>
        <inlineHelpText>The number of installs on this listing on this date. Used to calculate 30-day popularity for the listing.</inlineHelpText>
        <label>Install Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>PageViews__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The number of page views for the listing on this date. Used to calculate 30-day popularity for the listing.</description>
        <inlineHelpText>The number of page views for the listing on this date. Used to calculate 30-day popularity for the listing.</inlineHelpText>
        <label>Page Views</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>asb_Listing__c</fullName>
        <description>The listing with which the popularity is associated.</description>
        <inlineHelpText>The listing with which the popularity is associated.</inlineHelpText>
        <label>Listing</label>
        <referenceTo>asb_Listing__c</referenceTo>
        <relationshipLabel>Listing Popularity</relationshipLabel>
        <relationshipName>UserActivitySnapshots</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Daily popularity of each listing in the store.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Listing Popularity</label><nameField>
        <displayFormat>LP-{0}</displayFormat>
        <label>ListingPopularity Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Listing Popularity</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>